# PyPeekr

./: .gitignore  README.md  linux_setup.sh  pyproject.toml  setup.sh  test_sensor.py  windows_setup.bat
pypeekr/: pyproject.toml
pypeekr/src/pypeekr/pypeekr_client/: client.py  windows_client.py
pypeekr/src/pypeekr/pypeekr_gui/: gui_init.py  gui_main.py  gui_settings.py
pypeekr/src/pypeekr/pypeekr_gui/settings/: default_settings.yaml
pypeekr/src/pypeekr/pypeekr_server/: linux_server_app.py
pypeekr/src/pypeekr/pypeekr_utils/: create_config_dir.py  libre_hwm_inspector.py  libre_test_sensor.py  pypi_linter.py  set_settings_dirs.py
pypi_monitor/: pyproject.toml
pypi_monitor/src/pypi_monitor/pypi_client/: client.py  linux_client.py  windows_client.py
pypi_monitor/src/pypi_monitor/pypi_gui/: gui_main.py  gui_settings.py  gui_utils.py
pypi_monitor/src/pypi_monitor/pypi_gui/settings/: default_settings.yaml  settings.yaml
pypi_monitor/src/pypi_monitor/pypi_server/: linux_server_app.py  linux_server_data.py
pypi_monitor/src/pypi_monitor/pypi_utils/: create_config_dir.py  libre_hwm_inspector.py  libre_test_sensor.py  pypi_linter.py  set_settings_dirs.py
pypi_monitor/src/pypi_monitor/utils/: create_config_dir.py  set_settings_dirs.py
src/pypi_monitor/: pyproject.toml
src/pypi_monitor/pypi_gui/: gui.py  gui_settings.py
src/pypi_monitor/pypi_gui/settings/: gui_panes.py
