[tool.poetry]
name = "pypi_monitor"
version = "1.0.0"
description = "Python package that contains server and client for using RasPi as a PC Sysytem Monitor."
authors = ["Blake Krpec"]
readme = ["README.md"]

[tool.poetry.dependencies]
python = ">=3.6.0"
flask = ">=2.0.0"
psutil = ">=5.9.0"
py-cpuinfo = ">8.0.0"
gputil = ">1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]