[tool.poetry]
name = "pypeekr"
version = "1.0.0"
description = "Python package that contains server and client for monitoring system stat."
authors = ["Blake Krpec"]
readme = ["../README.md"]

[tool.poetry.dependencies]
python = ">=3.6.0"
flask = ">=2.0.0"
psutil = ">=5.9.0"
pyyaml ="*"
pyqt6 =">=6.6.0"
requests ="*"
flake8 ="*"
gputil ="*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_config_dir = "pypeekr.pypeekr_utils.create_config_dir:create_config_dir"
lint_pypeekr ="pypeekr_monitor.pypeekr_utils.pypeekr_linter:linter"
libre_hwm_inspector = "pypeekr.pypeekr_utils.libre_hwm_inspector:main"
run_linux_server = "pypeekr.pypeekr_server.linux_server_app:run_linux_server_app"
gui = "pypeekr.pypeekr_gui.gui_main:run_app"
