[tool.poetry]
name = "pypi_monitor"
version = "1.0.0"
description = "Python package that contains server and client for using RasPi as a PC Sysytem Monitor."
authors = ["Blake Krpec"]
readme = ["../README.md"]

[tool.poetry.dependencies]
python = ">=3.6.0"
flask = ">=2.0.0"
psutil = ">=5.9.0"
pyyaml ="*"
pyqt6 ="*"
requests ="*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gui = "pypi_monitor.pypi_gui.gui_main:run_app"
create_config_dir = "pypi_monitor.utils.create_config_dir:create_config_dir"