[tool.poetry]
name = "pypi_monitor"
version = "1.0.0"
description = "Python package that contains server and client for using RasPi as a PC Sysytem Monitor."
authors = ["Blake Krpec"]
readme = ["../README.md"]

[tool.poetry.dependencies]
python = ">=3.6.0"
flask = ">=2.0.0"
psutil = ">=5.9.0"
pyyaml ="*"
pyqt6 =">=6.6.0"
requests ="*"
flake8 ="*"
gputil ="*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_config_dir = "pypi_monitor.pypi_utils.create_config_dir:create_config_dir"
lint_pypi ="pypi_monitor.pypi_utils.pypi_linter:linter"
libre_hwm_inspector = "pypi_monitor.pypi_utils.libre_hwm_inspector:main"
run_linux_server = "pypi_monitor.pypi_server.linux_server_app:run_linux_server_app"
gui = "pypi_monitor.pypi_gui.gui_main:run_app"
